k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qazaq-learn-service
spec:
  selector:
    app: qazaq-learn
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
